yaml/k8s-assignment-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-api
spec:
  replicas: 4
  selector:
    matchLabels:
      app: k8s-api
  template:
    metadata:
      labels:
        app: k8s-api
    spec:
      containers:
      - name: k8s-api
        image: rohitmahadik/k8s:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: k8s-api
spec:
  type: ClusterIP
  selector:
    app: k8s-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
