yaml/k8s-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: k8s-api.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: k8s-api
                port:
                  number: 80
